--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,6 +1,6 @@
-displayName=Example
-author=Nobody
-support=
-description=An example greeter plugin
-tags=
-plugins=com.example.ExamplePlugin
+displayName=Random Quest Picker
+author=ToMeXaS
+support=https://github.com/ToMeXaS/random-quest-picker
+description=A simple plugin that picks a random quest for you to do!
+tags=random,quest,picker,wiki,qp,cape
+plugins=lt.tomexas.PickerPlugin
